--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ PLAY THE GAME">PLAY THE GAME</h1>
 
 <div class="row">
     <div class="macho">
-        <a href="index.html"><span class="xyz">P1 VS P2</span></a>
+        <a href="index11.html"><span class="xyz">P1 VS P2</span></a>
         <span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span>
         <a href="index2.html"><span class="abc">P1 VS COMP</span></a>
     </div>
